--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
 <h1>User Index</h1>
 
-<%= link_to "Create a new account", users_new_path %>
+<p><%= link_to "Create a new account", users_new_path %></p>
+<p><%= link_to "Login", sessions_new_path %></p>
