--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,8 @@
 <%= form_for @user do |f| %>
 <p>Username : </p><%= f.text_field :username %>
 <p>Email : </p><%= f.text_field :email %>
-<p>Password : </p><%= f.text_field :password %>
+<p>Password : </p><%= f.password_field :password %>
 <p><%= f.submit "Sign Up" %></p>
 <% end %>
+
+<%= link_to "Back", root_path %>
