--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
+
 <h1>User Index</h1>
 
 <p><%= link_to "Create a new account", users_new_path %></p>
+
 
 <% if signed_in? %>
 <p><%= link_to "Logout", logout_path, method: :delete %></p>
@@ -8,3 +10,5 @@
 <% else %>
 <p><%= link_to "Login", login_path %></p>
 <% end %>
+
+<%= link_to "Go to Listing", listings_path %> 
