--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,12 +1,18 @@
 <h1>Listing Index</h1> 
 
 <table>
-<% @listings.each do |l| %>
-	<td>
-	<tr><%= l.title %></tr>
-	<tr><%= link_to " Show ", listing_path(l.id) %></tr>
-	<tr><%= link_to " Edit ", edit_listing_path(l.id) %></tr>
-	<tr><%= link_to " Delete ", listing_path(l.id), action:  "delete" %></tr>
-	</td>
-<% end %>
 </table>
+<% @listings.each do |l| %>
+	<li><td>
+			<tr><%= l.title %></tr>
+		<tr><%= link_to " Show ", listing_path(l.id) %></tr>
+		<tr><%= link_to " Edit ", edit_listing_path(l.id) %></tr>
+		<tr><%= link_to " Delete ", listing_path(l.id), method: :delete, data: {confirm: "Are you sure?"} %></tr>
+	</td></li>
+<% end %>
+</ul>
+</table>
+
+
+<p><%= link_to "Create new listing", new_listing_path %></p>
+<p><%= link_to "Back", users_path %></p>
