--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,11 @@
+<h1>Index Page</h1> 
 
-<h1>User Index</h1>
+ <% if signed_in? %>
+      <p><%= button_to "Sign out", sign_out_path, method: :delete %></p>
+    <% else %>
+      <p><%= link_to "Log in here", sign_in_path %></p>
+      <p><%= link_to "Sign in with Facebook", "/auth/facebook" %></p>
+    <% end %>
 
-<p><%= link_to "Create a new account", users_new_path %></p>
+<p><%= link_to "Go to Listing", listings_path %></p>
 
-
-<% if signed_in? %>
-<p><%= link_to "Logout", logout_path, method: :delete %></p>
-
-<% else %>
-<p><%= link_to "Login", login_path %></p>
-<% end %>
-
-<%= link_to "Go to Listing", listings_path %> 
