--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Profile Page</h1>
 
-<p><%= @user.username %></p>
+<h3>Email : </h3>
 <p><%= @user.email %></p>
 
 <h3>Your list of booking:</h3>
