--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,7 +1,8 @@
 <h1>Create a New Listing</h1>
 
 <%= form_for @listing do |f| %>
-<%= f.text_field :title %>
+<h3>Title : </h3>
+<p><%= f.text_field :title %></p>
 <%= f.submit "Create new listing" %>
 <% end %>
 
