added tag to edit page

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -18,7 +18,8 @@
 		<p>Created by:
 		<% if l.user %>
 			<tr><%= l.user.email %></tr>
-		<% end %>
+		<% end %></p>
+		<br>
 	</td></li>
 <% end %>
 </ul>
