--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,8 +1,23 @@
-<h1>Listing Edit Page</h1>
+<h1>Edit Page for <%= @listing.title %></h1>
 
 <%= form_for @listing do |f| %>
-<p>Title : <%= f.text_field :title %></p>
+<p>Edit Title : <%= f.text_field :title %></p>
 <%= f.submit "Edit Listing" %>
 <% end %>
+
+<br>
+
+<h3>Edit Tags</h3>
+<p>Tags currently attached: 
+<% @listing.taggables.each do |l| %>
+	<%= l.tag.name %>
+<% end %>
+
+<%= form_tag(addingtag_path(@listing.id)) do %>
+<%= text_field_tag "name" %> 
+<%= submit_tag "Add Tag" %>
+<% end %>
+
+<%= button_to "Done adding tags", listings_path, :method => "get" %>
 
 <p><%= link_to "Back", listings_path %>
