Improved frontend with bootstrap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,14 @@
+a.navbar-brand {
+	padding: 0px;
+}
+
+
+img.brand_img {
+	height: 40px;
+	margin-top: 6px;	
+}
+
+
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
