--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,13 +1,14 @@
-<h1>Listing Index</h1> 
+<h2 class="intro"><span style="color: red">Airbnb Book</span> unique homes and experience a city like a local.</h2>
 
 <%= will_paginate @listings %>
 <br>
-<table>
-</table>
+
 <% @listings.each do |l| %>
-	<li><td>
-			<tr><%= l.title %></tr>
-			<tr><%= image_tag l.image_url.to_s %></tr>
+	<table>
+		<td>
+			<tr><span class="listing-title"><%= l.title %></span></tr>
+			<tr><%= image_tag l.image, class: "image-container"%></tr>
+			</div>
 		<tr><%= link_to listing_path(l.id), class: "btn btn-success btn-sml" do %>
 		<i class="glyphicon glyphicon-picture"></i> Show	
 		</tr>
@@ -43,8 +44,9 @@
 			<tr><%= l.user.email %></tr>
 		<% end %></p>
 		<br>
-	</td></li>
-<% end %>
+	</td>
+	</div>
+	<% end %>
 </ul>
 </table>
 <%= will_paginate @listings %>
