--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,60 +9,24 @@
   </head>
 
 <body>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><%= image_tag("airbnb_logo", :class => "brand_img") %></a>
+<div id="nav-bar">
+  <div class="nav-bar-left">
+    <a class="navbar-brand" href="#"><%= image_tag("airbnb_logo", :class => "brand_img") %></a>
+  </div>
+
+  <div class="nav-bar-right">
+    <div class="nav-bar-right-content">
+    <p><%=link_to "Help" %></p>
+  <% if signed_in? %>
+    <p><%= link_to "Profile", user_path(current_user.id), method: :get %></p>
+    <p><%= link_to "Log Out", sign_out_path, method: :delete %></p>
+  <% else %>
+    <p><%= link_to "Sign Up", sign_up_path %></p>
+    <p><%= link_to "Log In", sign_in_path %></p>
+  <% end %>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">FOR YOU <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">HOMES</a></li>
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Become a Host</a></li>
-            <li><a href="#">Sign Up</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Log In</a></li>
-            <li role="separator" class="divider"></li>
-          </ul>
-        </li>
-      </ul>
-
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  </div>
+</div>
 
 
   <div id="flash">
@@ -71,6 +35,8 @@
     <% end %>
   </div>
 
+  <div class="yield">
   <%= yield %>
+  </div>
 </body>
 </html>
