--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -101,6 +101,11 @@ div.pagination a {
     margin: 0px 10px;
 }
 
+div.row {
+        margin: 20px 0px 50px 0px;
+        padding: 0px;
+}
+
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
